--- a/index.css
+++ b/index.css
@@ -16,9 +16,16 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #222;
+  background-color: transparent;
     font-family: 'Amatic SC', cursive;
     font-weight: 700;
+}
+html { 
+  background: url(bg.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 body {
   color: #fff;
@@ -26,7 +33,7 @@ body {
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
 h1{
-    font-size: 350%;
+    font-size: 500%;
 }
 p{
     font-size: 250%;
@@ -35,7 +42,8 @@ p{
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   display: table;
-  width: 100%;
+  width: 60%;
+    margin-left: auto;
   height: 100%; /* For at least Firefox */
   min-height: 100%;
 
